--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
     {% if site.twitter.username %}
       <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
     {% endif %}
-    {% if site.facebook.username %}
+    {% if site.author.facebook %}
       <li><a href="https://facebook.com/{{ site.author.facebook }}"><i class="fab fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
     {% endif %}
     {% if site.author.github %}
