--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,11 @@
     {% if site.data.ui-text[site.locale].follow_label %}
       <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
     {% endif %}
-    {% if site.twitter.username %}
-      <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+    {% if site.author.linkedin %}
+      <li><a href="https://linkedin.com/{{ site.author.linkedin }}"><i class="fab fa-twitter" aria-hidden="true"></i> Twitter</a></li>
     {% endif %}
     {% if site.author.facebook %}
-      <li><a href="https://facebook.com/{{ site.author.facebook }}"><i class="fab fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
+      <li><a href="https://facebook.com/{{ site.author.facebook }}"><i class="fab fa-facebook" aria-hidden="true"></i> Facebook</a></li>
     {% endif %}
     {% if site.author.github %}
       <li><a href="http://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a></li>
