--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       <li><a href="https://facebook.com/{{ site.author.facebook }}"><i class="fab fa-facebook" aria-hidden="true"></i> Facebook</a></li>
     {% endif %}
     {% if site.author.linkedin %}
-      <li><a href="https://linkedin.com/in/{{ site.author.linkedin }}"><i class="fab fa-linkedin" aria-hidden="true"></i> Twitter</a></li>
+      <li><a href="https://linkedin.com/in/{{ site.author.linkedin }}"><i class="fab fa-linkedin" aria-hidden="true"></i> Linkedin</a></li>
     {% endif %}
     {% if site.author.bitbucket %}
       <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
